--- a/app/src/main/res/layout/activity_explore_ads.xml
+++ b/app/src/main/res/layout/activity_explore_ads.xml
@@ -1,27 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/primary"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:layout_height="match_parent"
+    android:background="@color/background">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
 
-    <Spinner
-        android:id="@+id/category_spinner"
+    >
+    <TextView
+        android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/rounded_border_background"
-        android:backgroundTint="#cccccc"
-        android:minHeight="48dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="15dp"
+        android:fontFamily="@font/texta_bold"
         android:textColor="@color/black"
-        android:textColorHint="@color/black" />
+        android:text="Discover"
+        android:textSize="56dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <ListView
-        android:id="@+id/ad_listview"
+    <ImageView
+        android:id="@+id/settings"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="40dp"
+        android:src="@drawable/settings" />
+
+</RelativeLayout>
+     <RelativeLayout
+        android:id="@+id/search_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:allowClickWhenDisabled="true"
-        android:background="@drawable/rounded_border_background" />
+        android:layout_below="@+id/toolbar_"
+        android:elevation="5dp"
+
+        >
+
+        <EditText
+            android:id="@+id/search"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginStart="23dp"
+            android:layout_marginLeft="23dp"
+            android:layout_marginTop="23dp"
+            android:layout_marginEnd="23dp"
+            android:layout_marginRight="23dp"
+            android:textColor="@color/black"
+            android:textColorHint="#A89A9A"
+            android:layout_marginBottom="23dp"
+            android:background="@drawable/edit_bg"
+            android:backgroundTint="@color/white"
+            android:drawableStart="@drawable/baseline_youtube_searched_for_24"
+            android:fontFamily="@font/texta_medium"
+            android:hint="  Search for products"
+            android:padding="15dp"
+
+            android:textSize="14dp" />
+
+        <ImageView
+            android:id="@+id/mic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginStart="37dp"
+            android:layout_marginTop="37dp"
+            android:layout_marginEnd="37dp"
+            android:layout_marginRight="37dp"
+            android:layout_marginBottom="37dp"
+            android:src="@drawable/baseline_mic_24" />
+    </RelativeLayout>
+
+
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="14dp"
+                android:layout_marginTop="14dp"
+                android:fontFamily="@font/texta_heavy"
+                android:gravity="left"
+                android:text="All Categories"
+                android:textColor="@color/black"
+
+                android:textSize="22dp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/categories"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="14dp"
+                    android:layout_marginTop="14dp"
+                    android:fontFamily="@font/texta_heavy"
+                    android:text="Store Items"
+                    android:textColor="@color/black"
+                    android:textSize="22dp" />
+
+                <TextView
+                    android:id="@+id/see_store"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginLeft="14dp"
+                    android:layout_marginTop="14dp"
+                    android:layout_marginRight="14dp"
+                    android:fontFamily="@font/texta_bold"
+                    android:text="See All"
+                    android:textColor="@color/blue"
+                    android:textSize="18dp" />
+
+            </RelativeLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/ad_listview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="8dp" />
 
 </LinearLayout>
