--- a/app/src/main/res/layout/ad_detail_activity.xml
+++ b/app/src/main/res/layout/ad_detail_activity.xml
@@ -1,132 +1,203 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/primary"
-    android:padding="12dp">
+   >
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="wrap_content">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar_"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/secondary">
+
+            <ImageView
+                android:id="@+id/backpress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="onBack"
+                android:src="@drawable/baseline_arrow_back_ios_new_24"
+                app:tint="@color/white" />
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginRight="20dp"
+
+                >
+
+                <ImageView
+                    android:id="@+id/favourite"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/baseline_favorite_border_24"
+                    app:tint="@color/white" />
+
+                <ImageView
+                    android:id="@+id/unfavourite"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/baseline_favorite_24"
+                    android:visibility="gone"
+                    app:tint="@color/white" />
+
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/ad_detail_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginEnd="25dp"
+                android:maxLines="1"
+                android:paddingLeft="6dp"
+                android:textColor="@color/white"
+                android:textSize="18dp"
+                android:textStyle="bold" />
+        </androidx.appcompat.widget.Toolbar>
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/image_number_textview"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:background="@drawable/rounded_border_background"
-            tools:layout_editor_absoluteX="1dp" />
+            android:layout_height="320dp"
+            android:layout_marginTop="60dp"/>
+
 
         <TextView
-            android:id="@+id/image_number_textview"
+            android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:background="@drawable/highlight_background"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="@+id/viewPager"
-            app:layout_constraintStart_toStartOf="@+id/viewPager"
-            app:layout_constraintEnd_toEndOf="@+id/viewPager"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <TextView
-        android:id="@+id/ad_detail_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Title"
-        android:textColor="@color/black"
-        android:textSize="28sp"
-        android:textStyle="bold"
-        android:layout_marginTop="16dp" />
-
-    <TextView
-        android:id="@+id/ad_detail_category"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Category"
-        android:textColor="#cccccc"
-        android:textSize="20sp"
-        android:layout_marginTop="8dp" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#E0E0E0"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="16dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Description"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:layout_marginTop="16dp"
-        android:textColor="@color/black" />
-
-    <TextView
-        android:id="@+id/ad_detail_description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textColor="#cccccc"
-        android:layout_marginTop="8dp"
-        android:text="This is the description for the above ad. The above ad Description is defined here." />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="horizontal"
-        android:layout_marginTop="25dp"
-        android:gravity="center">
-
-        <Button
-            android:id="@+id/btn_call"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="0dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="240dp"
+            android:layout_marginRight="45dp"
+            android:elevation="8dp"
+            android:shadowColor="@color/black"
+            android:shadowRadius="2"
+            android:text="Atlantis Paradise Island, Bahamas"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/ad_detail_category"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.7"
-            android:backgroundTint="#28D146"
-            android:text="Call"
-            android:textColor="@color/black"
-            android:drawableTint="@color/black"
-            android:drawableLeft="@drawable/baseline_call_24"
-            android:layout_marginEnd="2dp"
-            android:layout_marginStart="2dp"/>
+            android:layout_below="@id/name"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="25dp"
+            android:elevation="8dp"
+            android:shadowColor="@color/black"
+            android:shadowRadius="1"
+            android:text="Atlantis Paradise Island, Bahamas"
+            android:textColor="#DDDDDD"
+            android:textSize="15dp"
+            android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/btn_message"
-            android:layout_width="0dp"
+
+        <TextView
+            android:id="@+id/ad_detail_description"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:backgroundTint="@color/secondary"
-            android:text="Message"
+            android:layout_below="@+id/viewPager"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="15dp"
+            android:text="testing"
             android:textColor="@color/black"
-            android:layout_marginStart="2dp"
-            android:layout_marginEnd="2dp" />
+            android:textSize="18dp" />
 
-        <Button
-            android:id="@+id/btn_whatsapp"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="0dp"
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:backgroundTint="#28D146"
-            android:text="WhatsApp"
-            android:textColor="@color/black"
-            android:drawableTint="@color/black"
-            android:drawableLeft="@drawable/whatsapp"
-            android:layout_marginStart="2dp"
-            android:layout_marginEnd="2dp"/>
+            android:visibility="gone">
 
-    </LinearLayout>
-</LinearLayout>
+
+
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="16dp"
+                android:background="#E0E0E0" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Description"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="This is the description for the above ad. The above ad Description is defined here."
+                android:textColor="#cccccc"
+                android:textSize="16sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="25dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btn_call"
+                    style="?android:attr/buttonBarButtonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginEnd="2dp"
+                    android:layout_weight="0.7"
+                    android:backgroundTint="#28D146"
+                    android:drawableLeft="@drawable/baseline_call_24"
+                    android:drawableTint="@color/black"
+                    android:text="Call"
+                    android:textColor="@color/black" />
+
+                <Button
+                    android:id="@+id/btn_message"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginEnd="2dp"
+                    android:layout_weight="1"
+                    android:backgroundTint="@color/secondary"
+                    android:text="Message"
+                    android:textColor="@color/black" />
+
+                <Button
+                    android:id="@+id/btn_whatsapp"
+                    style="?android:attr/buttonBarButtonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginEnd="2dp"
+                    android:layout_weight="1"
+                    android:backgroundTint="#28D146"
+                    android:drawableLeft="@drawable/whatsapp"
+                    android:drawableTint="@color/black"
+                    android:text="WhatsApp"
+                    android:textColor="@color/black" />
+
+            </LinearLayout>
+        </LinearLayout>
+
+    </RelativeLayout>
+
+</ScrollView>
