--- a/app/src/main/res/layout/add_new_activity.xml
+++ b/app/src/main/res/layout/add_new_activity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -80,6 +80,78 @@
             android:paddingTop="5dp"
             android:textColor="@android:color/black" />
 
+        <EditText
+            android:id="@+id/editHost"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/rounded_border_background"
+            android:hint="Host Name"
+            android:minHeight="48dp"
+            android:paddingStart="10dp"
+            android:paddingTop="5dp"
+            android:textColor="@android:color/black" />
+
+        <EditText
+            android:id="@+id/editCompany"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/rounded_border_background"
+            android:hint="Company Name"
+            android:minHeight="48dp"
+            android:paddingStart="10dp"
+            android:paddingTop="5dp"
+            android:textColor="@android:color/black" />
+
+        <EditText
+            android:id="@+id/editcategory"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/rounded_border_background"
+            android:hint="Suggested New Category "
+            android:minHeight="48dp"
+            android:paddingStart="10dp"
+            android:paddingTop="5dp"
+            android:textColor="@android:color/black" />
+
+        <EditText
+            android:id="@+id/edit_from_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/rounded_border_background"
+            android:hint="From Date"
+            android:minHeight="48dp"
+            android:paddingStart="10dp"
+            android:paddingTop="5dp"
+            android:textColor="@android:color/black" />
+
+        <EditText
+            android:id="@+id/edit_to_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/rounded_border_background"
+            android:hint="To Date"
+            android:minHeight="48dp"
+            android:paddingStart="10dp"
+            android:paddingTop="5dp"
+            android:textColor="@android:color/black" />
+
+        <EditText
+            android:id="@+id/editTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/rounded_border_background"
+            android:hint="Time"
+            android:minHeight="48dp"
+            android:paddingStart="10dp"
+            android:paddingTop="5dp"
+            android:textColor="@android:color/black" />
+
         <Spinner
             android:id="@+id/spinnerCategory"
             android:layout_width="match_parent"
@@ -102,17 +174,17 @@
             android:text="Preview Ad"
             android:textColor="@color/white" />
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnSubmit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="center"
+            android:layout_marginTop="12dp"
+            android:background="@color/secondary"
+            android:text="Submit Ad"
+            android:textColor="@color/white" />
     </LinearLayout>
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnSubmit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="center"
-        android:layout_marginTop="12dp"
-        android:background="@color/secondary"
-        android:text="Submit Ad"
-        android:textColor="@color/white" />
 
-</RelativeLayout>
+</ScrollView>
