--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -180,7 +180,15 @@
     <color name="teal">#008080</color>
     <color name="darkgreen">#008000</color>
     <color name="darkergreen">#006400</color>
-    <color name="blue">#0000ff</color>
-    <color name="mediumblue">#0000cd</color>
+     <color name="mediumblue">#0000cd</color>
     <color name="navy">#000080</color>
+
+    <color name="blue">#1297A5</color>
+    <color name="icon">#808080</color>
+    <color name="gray_24">#EBE9E9</color>
+    <color name="colorPrimary">#009688</color>
+
+    <color name="light_green">#8DC494</color>
+    <color name="background">#0C009688</color>
+    <color name="card_background">#3464B6AE</color>
 </resources>
