--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -29,10 +29,10 @@ android:fontFamily="@font/texta_heavy"        android:text="Update Profile"
         android:id="@+id/full_name_et"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:paddingLeft="13dp"
-        android:hint="Full Name"
         android:background="@drawable/edit_bg"
+        android:hint="Full Name"
         android:inputType="text"
+        android:paddingLeft="13dp"
         android:textColor="@color/black"
         android:textColorHint="#cccccc"
         android:textSize="18sp" />
@@ -48,6 +48,30 @@ android:fontFamily="@font/texta_heavy"        android:text="Update Profile"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:hint="Email"
+        android:inputType="textEmailAddress"
+        android:textColor="@color/black"
+        android:textColorHint="#cccccc"
+        android:textSize="18sp" />
+  <EditText
+        android:id="@+id/phone_et"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="10dp"
+        android:paddingLeft="10dp"
+        android:background="@drawable/edit_bg"
+           android:hint="Phone"
+        android:inputType="textEmailAddress"
+        android:textColor="@color/black"
+        android:textColorHint="#cccccc"
+        android:textSize="18sp" />
+  <EditText
+        android:id="@+id/address_et"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="10dp"
+        android:paddingLeft="10dp"
+        android:background="@drawable/edit_bg"
+       android:hint="Address"
         android:inputType="textEmailAddress"
         android:textColor="@color/black"
         android:textColorHint="#cccccc"
