--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -23,12 +23,84 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
+        android:id="@+id/reg_name"
+
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:background="@drawable/edit_bg"
+        android:drawableStart="@drawable/baseline_person_2_24"
+        android:drawablePadding="13dp"
+        android:drawableTint="@color/black"
+        android:ems="10"
+        android:hint="Enter Name"
+        android:paddingLeft="20dp"
+        android:textColor="@color/black"
+        android:textColorHint="#cccccc"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.539" />
+
+    <EditText
+        android:id="@+id/reg_phone"
+
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="30dp"
+        android:background="@drawable/edit_bg"
+
+        android:drawableStart="@drawable/baseline_phone_enabled_24"
+        android:drawablePadding="13dp"
+        android:drawableTint="@color/black"
+
+        android:hint="Enter Phone"
+        android:inputType="phone"
+        android:paddingLeft="20dp"
+        android:textColor="@color/black"
+        android:textColorHint="#cccccc"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.539" />
+
+    <EditText
+        android:id="@+id/reg_address"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="30dp"
+        android:background="@drawable/edit_bg"
+        android:drawableStart="@drawable/baseline_home_24"
+        android:drawablePadding="13dp"
+        android:drawableTint="@color/black"
+        android:ems="10"
+        android:hint="Enter Address"
+        android:paddingLeft="20dp"
+        android:textColor="@color/black"
+        android:textColorHint="#cccccc"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.539" />
+
+    <EditText
         android:id="@+id/reg_email"
 
         android:layout_width="match_parent"
         android:layout_height="60dp"
 
         android:layout_marginLeft="30dp"
+        android:layout_marginTop="30dp"
         android:layout_marginRight="30dp"
         android:background="@drawable/edit_bg"
         android:drawableLeft="@drawable/baseline_email_24"
@@ -50,7 +122,10 @@
         android:id="@+id/reg_pwd"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_margin="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="30dp"
+
         android:background="@drawable/edit_bg"
         android:drawableLeft="@drawable/baseline_vpn_key_24"
         android:drawablePadding="13dp"
@@ -58,9 +133,9 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
+        android:paddingLeft="20dp"
         android:textColor="@color/black"
         android:textColorHint="#cccccc"
-        android:paddingLeft="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -73,9 +148,11 @@
         android:layout_width="260dp"
         android:layout_height="57dp"
         android:layout_gravity="center"
+        android:layout_marginTop="15dp"
         android:background="@drawable/btn_bg"
         android:text="SIGN IN"
         android:textSize="15dp"
+
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,9 +164,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:gravity="center"
-        android:layout_height="wrap_content">
+        android:gravity="center">
 
         <TextView
             android:id="@+id/textView4"
@@ -112,12 +189,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:clickable="true"
             android:layout_marginLeft="10dp"
+            android:clickable="true"
             android:fontFamily="@font/texta_heavy"
+            android:gravity="center"
             android:onClick="switchToLoginActivity"
             android:text="Login"
-            android:gravity="center"
 
             android:textColor="#08626C"
             android:textSize="16sp"
