--- a/app/src/main/res/layout/add_new_activity.xml
+++ b/app/src/main/res/layout/add_new_activity.xml
@@ -88,7 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:background="@drawable/rounded_border_background"
-            android:hint="Contact Info"
+            android:hint="Phone Number"
             android:minHeight="48dp"
             android:paddingStart="10dp"
             android:paddingTop="5dp"
